2004-10-31  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputStruct): handle opaque/forward struct
	declarations. #156318 again. Tiny fix to avoid warnings.

2004-10-28  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mktmpl.in (ReadDeclarationsFile): 
	* gtkdoc-mkdb.in (ReadDeclarationsFile): 
	* gtkdoc-scan.in (ScanHeader): handle opaque/forward struct
	declarations. #156318.

2004-10-25  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (OutputParamDescriptions): use a &nbsp; after Returns:
	so it doesn't break before the colon.

2004-10-24  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-common.pl (ParseEnumDeclaration): handle "typedef enum XXX {"
	#156297. Patch from Simon Josefsson.

2004-10-20  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-mkdb.in (ReadDeclarationsFile): set a flag to indicate a
	struct has a typedef declaration.
	(OutputStruct): better output for structs with typedefs. #83269.

	* gtkdoc-scan.in (ScanHeader): leave the struct declaration as it is.
	Don't strip out 'typedef'. Also allow simple "struct foo {".

2004-10-19  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-fixxref.in: use pkg-config to find where GLib is installed
	and scan that directory for index files. Also scan $GNOME2_PATH.
	These are only used as a last resort. If they are used we have to
	output links as absolute URLs, rather than the default relative ones.

2004-10-18  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-common.pl.in (ParseStructDeclaration): support function
	pointers that return "foo const *" #141870.

	* gtkdoc-scan.in (ScanHeader): 
	* gtkdoc-mkdb.in (OutputFunction): 
	* gtkdoc-mktmpl.in (OutputDeclaration): handle functions with const
	or struct return types. #141870 and #148507.

2004-10-15  Damon Chaplin  <damon@gnome.org>

	* gtkdoc-common.pl.in (ParseStructDeclaration)
	(ParseEnumDeclaration): moved these here, rather than have 2 copies
	in gtkdoc-mkdb.in and gtkdoc-mktmpl.in.

	* gtkdoc-common.pl.in (ParseStructDeclaration): handle struct fields