@@ -1,3 +1,8 @@
+2004-11-16  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-scan.in (ScanHeader): handle __attribute__. Patch from
+	Simon Josefsson. #156962.
+
 2004-10-31  Damon Chaplin  <damon@gnome.org>
 
 	* gtkdoc-mkdb.in (OutputStruct): handle opaque/forward struct
